# maruti

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  .roomodes  CLAUDE.md  DOCKER.md  Dockerfile  MCP_DEVELOPMENT_WORKFLOW.md  README.md  REMOVAL_CANDIDATES.md  docker-compose.yml  docker-dev.ps1  docker-dev.sh  main.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: board-manager.md  code-reviewer.md  requirements-analyst.md  software-developer.md  spec-reviewer.md  team-lead.md
.claude/commands/: board-manager.md  dev-team.md  pm-team.md
.claude/skills/: assistant-wizard  mcp-tool-architect  pm-team
.devcontainer/: Dockerfile  QUICKSTART.md  README.md  add-mcp-server.sh  devcontainer.json  post-create.sh  vscode-settings.json
.github/agents/: Fund-Selection-Advisor.agent.md  agent-builder-internals  agent-builder-old.agent.md  agent-builder-v2.agent.md  agent-builder.agent.md  assistant-wizard.agent.md  copilot-instructions.md  fund-selection-advisor.agent.md  mcp-tool-architect-internals  mcp-tool-architect.agent.md  profile-manager-internals  profile-manager.agent.md  shannon-internals  shannon.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constibution.builder.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.github/workflows/: ci.yml
.roo/rules-mcp-gen/: 1_workflow.xml  2_best_practices.xml  3_common_patterns.xml  4_tool_usage.xml  5_examples.xml  6_error_handling.xml  7_communication.xml
.specify/memory/: constitution.md
agent-memory/: GITHUB_SETUP.md  README.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  pyproject.toml  test_basic.py  test_server.py  test_simple.py
agent-memory/src/agent_memory/: Spec.md  __init__.py  __main__.py  errors.py  memory_ops.py  safety.py  schemas.py  server.py  tools.py
agents/: README.md
docs/: Constitution.md  development.md  specs-template.md
mcp-tools/agent-memory/: GITHUB_SETUP.md  README.md  TROUBLESHOOTING.md  pyproject.toml  test_basic.py  test_simple.py
mcp-tools/agent-memory/specs/: README.md
mcp-tools/agent-memory/src/agent_memory/: __init__.py  __main__.py  errors.py  memory_ops.py  safety.py  server.py  tools.py
mcp-tools/agent-memory/tests/: test_agent_memory_more_coverage.py  test_agent_memory_tools_branch_coverage.py  test_agent_memory_tools_coverage.py  test_main_dispatch.py  test_memory_ops_and_tools.py  test_safety_and_errors_branches.py  test_server_handlers.py
mcp-tools/github-app-mcp/: README.md  pyproject.toml
mcp-tools/github-app-mcp/specs/002-github-app-mcp/: data-model.md  research.md
mcp-tools/github-app-mcp/specs/002-github-app-mcp/checklists/: security.md
mcp-tools/github-app-mcp/specs/002-github-app-mcp/contracts/: mcp-contracts.json
mcp-tools/github-app-mcp/src/github_app_mcp/: __init__.py  __main__.py  audit.py  auth.py  config.py  errors.py  github_client.py  github_graphql_client.py  policy.py  safety.py  server.py  tools.py
mcp-tools/github-app-mcp/tests/: test_audit_events.py  test_audit_rotation.py  test_auth_token_cache.py  test_contract_schemas.py  test_errors_helpers.py  test_foundation_audit.py  test_foundation_config.py  test_foundation_safety.py  test_github_client_errors.py  test_github_client_requests.py  test_github_client_retry.py  test_github_graphql_client.py  test_policy.py  test_revocation_handling.py  test_safety_misc.py  test_scaffold.py  test_tools_errors_and_validation.py  test_tools_happy_paths.py  test_tools_internal_functions.py  test_tools_more_coverage.py  test_tools_policy_enforcement.py  test_tools_runtime_init.py
mcp-tools/onenote-reader/: README.md  pyproject.toml
mcp-tools/onenote-reader/src/onenote_reader/: __init__.py  __main__.py  auth.py  config.py  errors.py  graph_client.py  html_sanitizer.py  safety.py  server.py  tools.py
mcp-tools/onenote-reader/tests/: test_onenote_scaffold.py
mcp-tools/pdf-reader/: MCP_USAGE.md  README.md  main.py  pyproject.toml  test_pdf.py
mcp-tools/pdf-reader/specs/: README.md
mcp-tools/pdf-reader/src/pdf_reader/: __init__.py  __main__.py  errors.py  pdf_processor.py  safety.py  server.py  tools.py
mcp-tools/pdf-reader/tests/: test_main_dispatch.py  test_pdf_processor_branch_coverage.py  test_pdf_reader_more_coverage.py  test_pdf_tools_and_processor.py  test_pdf_tools_branch_coverage.py  test_pdf_tools_error_branches.py  test_server_handlers.py
mcp-tools/xlsx-reader/: README.md  USAGE_EXAMPLES.md  pyproject.toml  test_server.py
mcp-tools/xlsx-reader/specs/: README.md
mcp-tools/xlsx-reader/src/xlsx_reader/: __init__.py  __main__.py  errors.py  safety.py  server.py
mcp-tools/xlsx-reader/src/xlsx_reader/processors/: __init__.py  charts.py  exporters.py  pivots.py  workbook.py
mcp-tools/xlsx-reader/src/xlsx_reader/tools/: __init__.py
mcp-tools/xlsx-reader/src/xlsx_reader/utils/: __init__.py  validation.py
mcp-tools/xlsx-reader/tests/: test_main_dispatch.py  test_server_handlers.py  test_xlsx_charts_pivots_workbook_coverage.py  test_xlsx_core.py  test_xlsx_more_coverage.py
onenote-reader/: README.md  pyproject.toml
onenote-reader/src/onenote_reader/: __init__.py  __main__.py  auth.py  config.py  errors.py  graph_client.py  safety.py  server.py  tools.py
pdf-reader/: MCP_USAGE.md  README.md  main.py  pyproject.toml  test_pdf.py
scripts/: README.md  link_agents.py  link_packages.py  new_mcp_tool.py
templates/mcp-tool/: README-TEMPLATE.md  README.md  pyproject.toml
templates/mcp-tool/specs/: README.md
templates/mcp-tool/src/__module__/: __init__.py  __main__.py  server.py  tools.py
templates/mcp-tool/tests/: test_server_handlers.py
xlsx-reader/: README.md  USAGE_EXAMPLES.md  pyproject.toml  test_server.py
(+76 files in other folders)
