[project]
name = "maruti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
exclude = [
    "**/tests/**",
    ".specify/**",
    "**/__pycache__/**",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.workspace]
members = [
    "mcp-tools/agent-memory",
    "mcp-tools/github-app-mcp",
    "mcp-tools/pdf-reader",
    "mcp-tools/onenote-reader",
    "mcp-tools/xlsx-reader",
]
