[project]
name = "maruti"
version = "0.1.0"
description = "Maruti — a uv workspace of self-contained MCP tools and a factory for portable agent markdown definitions."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
exclude = [
    "**/tests/**",
    "**/__pycache__/**",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
# importlib import mode lets each tool keep its own tests/ files with the
# same basename across tools (e.g. test_server_handlers.py in every tool)
# without colliding when pytest is run from the workspace root.
addopts = ["--import-mode=importlib"]

[tool.uv.workspace]
members = [
    "mcp-tools/agent-memory",
    "mcp-tools/pdf-reader",
    "mcp-tools/xlsx-reader",
]
