[project]
name = "agent-memory"
version = "1.0.0"
description = "A deterministic Memory Control Plane (MCP) server for AI agents with structured, versioned, repository-backed memory system"
authors = [
    {name = "MCP Generator", email = "mcp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
keywords = ["agent", "memory", "mcp", "model-context-protocol", "ai", "persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core MCP server functionality
    "mcp>=1.0.0",
    # No additional dependencies needed - uses only Python standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/agent-memory-mcp"
Repository = "https://github.com/example/agent-memory-mcp"
Documentation = "https://github.com/example/agent-memory-mcp#readme"
Issues = "https://github.com/example/agent-memory-mcp/issues"

[project.scripts]
agent-memory = "agent_memory.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Use src/ layout explicit package path so hatchling includes code.
packages = ["src/agent_memory"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=agent_memory",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
