[project]
name = "onenote-reader"
version = "0.0.1"
description = "MCP server that will read and write OneNote page content via share link (scaffold phase)."
readme = "README.md"
authors = [
    { name = "Satish Chandra", email = "satishc@microsoft.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

# Core dependency: mcp (JSON-RPC MCP server library)
# Future (not yet used in scaffold): msal for device code authentication
dependencies = [
    "mcp",
]

[project.optional-dependencies]
auth = [
    "msal>=1.28.0"
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
]

[project.scripts]
onenote-reader = "onenote_reader:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.onenote_reader]
# Placeholder config section (future: could be read dynamically)
max_content_html_chars = 100000
max_plaintext_extract_chars = 200000
rate_limit_max_calls = 5
rate_limit_window_seconds = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__main__.py",
    "*/server.py",
]

[tool.ruff]
exclude = [
    "**/tests/**",
    ".specify/**",
    "**/__pycache__/**",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
