[project]
name = "pdf-reader"
version = "1.0.0"
description = "A comprehensive Model Context Protocol server for PDF reading and content extraction"
authors = [
    {name = "MCP Generator", email = "mcp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
keywords = ["pdf", "mcp", "model-context-protocol", "text-extraction", "document-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core MCP server functionality
    "mcp>=1.0.0",
    # PDF processing libraries
    "pypdf>=5.0.0",
    "pdfplumber>=0.10.0",
    # Image processing for PDF images
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
tables = [
    # Table extraction - optional due to build complexity on some systems
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/example/pdf-reader-mcp"
Repository = "https://github.com/example/pdf-reader-mcp"
Documentation = "https://github.com/example/pdf-reader-mcp#readme"
Issues = "https://github.com/example/pdf-reader-mcp/issues"

[project.scripts]
pdf-reader = "pdf_reader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Use src/ layout explicit package path so hatchling includes code.
packages = ["src/pdf_reader"]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pypdf.*",
    "pdfplumber.*",
    "pandas.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__main__.py",
    "*/server.py",
]
