[project]
name = "{{TOOL_HYPHEN}}"
version = "0.1.0"
description = "{{TOOL_DESCRIPTION}}"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
keywords = ["mcp", "model-context-protocol", "{{TOOL_HYPHEN}}"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[project.scripts]
{{TOOL_HYPHEN}} = "{{TOOL_MODULE}}.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{TOOL_MODULE}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov={{TOOL_MODULE}}",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
    "--import-mode=importlib",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
